--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>PG SLOT Free | เล่นสล็อตออนไลน์ฟรี | ทดลองเล่นสล็อต</title>
+    <link rel="canonical" href="https://pgslot-free.com" />
+    <meta name="description" content="ทดลองเล่นฟรีแบบไม่อั้น กับเกมส์หลากหลาย Style จากค่าย PGSLOT 2021 แบบจุใจได้ที่นี่" />
+    <meta property="og:locale" content="th_TH">
+    <meta property="og:title" content="ทดลองเล่นสล็อตออนไลน์ PG slot ให้เครดิตทดลองเล่น 10,000 บาท">
+    <meta property="og:type" content="article">
+    <meta property="og:description" content="ทดลองเล่นฟรีแบบไม่อั้น กับเกมส์หลากหลาย Style จากค่าย PGSLOT 2021 แบบจุใจได้ที่นี่">
+    <meta property="og:url" content="https://www.pgslot-free.com/">
+    <meta property="og:site_name" content="PGSLOT">
+    <meta property="og:image" content="https://watafak88.com/img/article/pg.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="สล็อตออนไลน์ฟรี ไม่อั้น PGSLOT เว็บตรงสล็อตPG Game พีจี SLOT PG!">
+    <meta name="twitter:description" content="PGSLOT.TO อันดับ 1 เว็บตรง PG SLOT Game ทางเข้าเล่นสล็อตPG ที่แตกง่ายล่าสุด เกม SLOT PG ที่แตกบ่อย โบนัสค่ายพีจีสล็อตออนไลน์สูงสุด โปรโมชั่น PGสล็อต มากกว่าใคร!">
+    
+    
+    <link rel="icon" href="https://watafak88.com/img/article/pg.png" />
+    <link rel="apple-touch-icon" href="https://watafak88.com/img/article/pg.png" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
