--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,170 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PG SLOT Free | เล่นสล็อตออนไลน์ฟรี | ทดลองเล่นสล็อต</title>
-    <link rel="canonical" href="https://pgslot-free.com" />
+    <link rel="canonical" href="https://www.pgslot-free.com/" />
     <meta name="description" content="ทดลองเล่นฟรีแบบไม่อั้น กับเกมส์หลากหลาย Style จากค่าย PGSLOT 2021 แบบจุใจได้ที่นี่" />
-    <meta property="og:locale" content="th_TH">
-    <meta property="og:title" content="ทดลองเล่นสล็อตออนไลน์ PG slot ให้เครดิตทดลองเล่น 10,000 บาท">
-    <meta property="og:type" content="article">
-    <meta property="og:description" content="ทดลองเล่นฟรีแบบไม่อั้น กับเกมส์หลากหลาย Style จากค่าย PGSLOT 2021 แบบจุใจได้ที่นี่">
-    <meta property="og:url" content="https://www.pgslot-free.com/">
-    <meta property="og:site_name" content="PGSLOT">
-    <meta property="og:image" content="https://watafak88.com/img/article/pg.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="สล็อตออนไลน์ฟรี ไม่อั้น PGSLOT เว็บตรงสล็อตPG Game พีจี SLOT PG!">
-    <meta name="twitter:description" content="PGSLOT.TO อันดับ 1 เว็บตรง PG SLOT Game ทางเข้าเล่นสล็อตPG ที่แตกง่ายล่าสุด เกม SLOT PG ที่แตกบ่อย โบนัสค่ายพีจีสล็อตออนไลน์สูงสุด โปรโมชั่น PGสล็อต มากกว่าใคร!">
-    
-    
+    <meta property="og:locale" content="th_TH" />
+    <meta property="og:title" content="ทดลองเล่นสล็อตออนไลน์ PG slot ให้เครดิตทดลองเล่น 10,000 บาท" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="ทดลองเล่นฟรีแบบไม่อั้น กับเกมส์หลากหลาย Style จากค่าย PGSLOT 2021 แบบจุใจได้ที่นี่" />
+    <meta property="og:url" content="https://www.pgslot-free.com/" />
+    <meta property="og:site_name" content="PGSLOT" />
+    <meta property="og:image" content="https://watafak88.com/img/article/pg.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="สล็อตออนไลน์ฟรี ไม่อั้น PGSLOT เว็บตรงสล็อตPG Game พีจี SLOT PG!" />
+    <meta
+      name="twitter:description"
+      content="PGSLOT.TO อันดับ 1 เว็บตรง PG SLOT Game ทางเข้าเล่นสล็อตPG ที่แตกง่ายล่าสุด เกม SLOT PG ที่แตกบ่อย โบนัสค่ายพีจีสล็อตออนไลน์สูงสุด โปรโมชั่น PGสล็อต มากกว่าใคร!"
+    />
+    <meta name="google-site-verification" content="Tl32-8mpDVfqOrWI9ACfbsmQb5vEsYXzcYMpBHLtVEA" />
+    <link href="https://www.pgslot-free.com/static/js/2.3b92c95e.chunk.js" rel="preload" as="script" />
+    <link href="https://watafak88.com/img/article/pg.png" rel="preconnect" as="image" />
+
+    <link href="css/bootstrap.min.css" rel="preload" as="style" onload="this.rel='stylesheet'" />
+    <noscript><link rel="stylesheet" href="css/bootstrap.min.css" /></noscript>
+
     <link rel="icon" href="https://watafak88.com/img/article/pg.png" />
     <link rel="apple-touch-icon" href="https://watafak88.com/img/article/pg.png" />
+    <style>
+      :root {
+        --blue: #14d0f0e6;
+        --pink: rgba(255, 131, 195, 0.4);
+        --white: rgba(255, 255, 255, 0.9);
+      }
+
+      .bg-content {
+        background: linear-gradient(to top, rgba(255, 131, 195, 0.9), rgba(255, 255, 255, 0.9));
+      }
+      .background-texture {
+        background: linear-gradient(to top, rgba(255, 131, 195, 0.9), rgba(255, 255, 255, 0.9));
+        background-size: cover;
+        width: 100vw;
+        height: 50vh;
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: 1;
+      }
+
+      .header {
+        width: 100%;
+        height: 80px;
+        height: 50vh;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+        z-index: 1;
+      }
+
+      .left-content {
+        width: 40vw;
+        padding-left: 10px;
+      }
+
+      .stay-home {
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        letter-spacing: 0.5rem;
+        margin-bottom: 0;
+        color: #8b64b4;
+      }
+
+      h1 {
+        margin: 0 0 1rem 0;
+        font-weight: 800 !important;
+        font-size: 3rem !important;
+        text-transform: uppercase;
+        color: #f3a807;
+      }
+
+      h2 {
+        margin: 0 0 1rem 0;
+        font-weight: 700 !important;
+        font-size: 2.2rem !important;
+        text-transform: uppercase;
+        color: #9c27b0;
+      }
+
+      .para {
+        color: #3b365ecb;
+      }
+
+      button {
+        padding: 0.9rem 1.2rem;
+        border-radius: 25px;
+        background-color: var(--blue);
+        border: 0;
+        /* text-transform: uppercase; */
+        letter-spacing: 0.2rem;
+        font-size: 1rem;
+        color: var(--white);
+        cursor: pointer;
+      }
+
+      svg {
+        position: absolute;
+        min-height: 300px;
+        right: 0;
+        top: 40px;
+      }
+
+      #rightEar,
+      #leftEar,
+      #in-drawing {
+        animation: ear 2s linear infinite;
+      }
+
+      @keyframes ear {
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+          transform: translateY(0);
+        }
+        40% {
+          transform: translateY(-30px);
+        }
+        60% {
+          transform: translateY(-15px);
+        }
+      }
+      .facebook-button {
+        position: fixed;
+        bottom: 135px;
+        z-index: 99;
+        right: 10px;
+        width: 50px;
+      }
+      .line-button {
+        position: fixed;
+        bottom: 80px;
+        z-index: 99;
+        right: 10px;
+        width: 50px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+    <div class="container text-center">
+      <h1>แมนยู</h1>
+      <h2>แมนยูยำทอฟฟี่ก่อนบู๊ลีดส์ รอซานโช่-วารานบวก... สรุป4นัดปรีซีซั่นผี</h2>
+      <h3>แมนฯ ยูไนเต็ด เรียกความพร้อมเต็มที่ก่อนเปิดซีซั่นใหม่ ด้วยการเปิดบ้านไล่อัด เอฟเวอร์ตัน 4-0</h3>
+      <p>
+        โอเล่ กุนนาร์ โซลชา จัดทัพใหญ่ดวล เอฟเวอร์ตัน ในเกมอุ่นเครื่องที่ โอลด์ แทร็ฟฟอร์ด นำโดยกัปตันทีม แฮร์รี่ แม็กไกวร์ ที่คุมแนวรับร่วมกับดาวเด่น ยูโร 2020 อย่าง ลุค ชอว์ ส่วนแผงมิดฟิลด์ให้โอกาส
+        ดอนนี่ ฟาน เดอ เบ็ค โชว์ฝีเท้า ขณะที่แนวรุก บรูโน่ แฟร์นันด์ส ผนึกกำลังกับ เมสัน กรีนวู้ด ป้อนให้หอกเป้า อ็องโตนี่ มาร์กซิยาล โดยมี ปอล ป็อกบา รอโอกาสบนม้านั่งสำรอง ทว่ายังไร้ชื่อ เจดอน ซานโช่
+        ทั้งนี้ ข่าวร้ายของแค้มป์ "ปีศาจแดง" คือการที่ เจสซี่ ลินการ์ด ต้องถอนตัวจากทีมไปเนื่องจากตรวจพบว่าติดเชื้อโควิด-19 ด้าน เอฟเวอร์ตัน ของกุนซือสแปนิช ราฟาเอล เบนิเตซ ขนดาวดังมาเยือนครบครันทั้ง
+        จอร์แดน พิคฟอร์ด, ไมเคิ่ล คีน, ลูก้าส์ ดีญ, อเล็กซ์ อิโวบี้, อัลลัน, แอนดรอส ทาวน์เซนด์ รวมถึง ฮาเมส โรดริเกซ โดยเกมนี้ มีรายงานว่า ได้ปล่อยให้แฟนบอลเข้าชมใน โอลด์ แทร็ฟฟอร์ด ได้ราว 55,000 คน
+        มากที่สุดนับตั้งแต่เกมรับ ดาร์บี้ เมื่อ 8 มี.ค. 2020 ก่อนล็อกดาวน์ เพราะพิษโควิด-19 แมนฯ ยูไนเต็ด เป็นฝ่ายเดินหน้ากดดันผู้มาเยือนตั้งแต่นาทีแรก และเมื่อเข้าสู่ น.8 แฟนผีใน โอลด์ แทร็ฟฟอร์ด
+        ก็ได้เฮเมื่อ ดีญ โหม่งคืนหลังให้ พิคฟอร์ด รับพลาดแบบไม่เข้าใจกัน ทำให้บอลทะลักมาถึง กรีนวู้ด ที่รับส้มหล่นแปเข้าประตูโล่งๆ ไม่เหลือซากส่ง แมนฯ ยูไนเต็ด ทะยาน 1-0 อย่างรวดเร็ว เร้ด อาร์มี่
+        ได้ใจ น.10 บรูโน่ ลากบอลเข้าหากรอบเขตโทษตรงมุมด้านซ้ายก่อนตัดสินใจตะบันด้วยขวา พิคฟอร์ด รับกระฉอกก่อนที่ มาร์กซิยาล จะปรี่เข้าซ้ำ ทว่าติดบล็อกหวุดหวิด กระทั่ง น.15 ปีศาจแดง
+        ก็ได้ประตูเพิ่มจนได้จากจังหวะเตะมุมด้านซ้าย ชอว์ อาสาเปิดเข้ามาที่จุดนัดพบให้ แม็กไกวร์ วิ่งมาขวิดเน้นๆ ตุงตาข่ายให้ แมนฯ ยูไนเต็ด หนี 2-0 เจ้าบ้านครองเกมไว้ได้หมด ขณะที่สายฝนเริ่มโปรยปรายลงมา
+        กระทั่ง น.29 มาติช เรียกฟรีคิกระยะอันตรายราว 26 หลาให้ แมนฯ ยูไนเต็ด ได้ ก่อนที่ บรูโน่ จะรับหน้าที่เพชฌฆาตตะบันเสียบตาข่ายเข้าไปแบบสุดสวยให้ เร้ด เดวิลส์ ทะยาน 3-0 ในครึ่งแรก
+        ครึ่งหลังทั้งสองทีมมีการเปลี่ยนตัวโดย โซลชา ส่ง เฟร็ด, ฆวน มาต้า และป็อกบา ลงแทน ฟาน เดอ เบ็ค, มาติช และ มาร์กซิยาล ส่วน เบนิเตซ แก้เกมด้วยการปล่อย ฟาเบียน เดลฟ์ และ อัสมีร์ เบโกวิช
+        มือกาวจอมเก๋าลงสนาม
+      </p>
+    </div>
   </body>
 </html>
